--- a/src/style.scss
+++ b/src/style.scss
@@ -4,12 +4,12 @@
 
 @font-face {
     font-family: Utopia;
-    src: url(/fonts/utopia.otf);
+    src: url(/src/fonts/utopia.otf);
 }
 @font-face {
     font-family: Apercu_Mono;
     /*src: url(/fonts/apercu_mono_pro.otf);*/
-    src: url(apercu_mono_pro.otf);
+    src: url(/src/fonts/apercu_mono_pro.otf);
 }
 
 a {
